--- a/.config
+++ b/.config
@@ -67,7 +67,7 @@ CONFIG_TARGET_mediatek_filogic=y
 # CONFIG_TARGET_mediatek_filogic_DEVICE_fzs_5gcpe-p3 is not set
 # CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt2500 is not set
 # CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt3000 is not set
-CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt6000=y
+# CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt6000=y
 # CONFIG_TARGET_mediatek_filogic_DEVICE_h3c_magic-nx30-pro is not set
 # CONFIG_TARGET_mediatek_filogic_DEVICE_imou_lc-hx3001 is not set
 # CONFIG_TARGET_mediatek_filogic_DEVICE_jcg_q30-pro is not set
@@ -80,7 +80,7 @@ CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt6000=y
 # CONFIG_TARGET_mediatek_filogic_DEVICE_qihoo_360t7 is not set
 # CONFIG_TARGET_mediatek_filogic_DEVICE_ruijie_rg-x60-pro is not set
 # CONFIG_TARGET_mediatek_filogic_DEVICE_tplink_tl-xdr4288 is not set
-# CONFIG_TARGET_mediatek_filogic_DEVICE_tplink_tl-xdr6086 is not set
+CONFIG_TARGET_mediatek_filogic_DEVICE_tplink_tl-xdr6086=y
 # CONFIG_TARGET_mediatek_filogic_DEVICE_tplink_tl-xdr6088 is not set
 # CONFIG_TARGET_mediatek_filogic_DEVICE_tplink_tl-xtr8488 is not set
 # CONFIG_TARGET_mediatek_filogic_DEVICE_xiaomi_mi-router-ax3000t is not set
@@ -90,7 +90,7 @@ CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="mediatek"
 CONFIG_TARGET_SUBTARGET="filogic"
-CONFIG_TARGET_PROFILE="DEVICE_glinet_gl-mt6000"
+CONFIG_TARGET_PROFILE="DEVICE_tplink_tl-xdr6086"
 CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"
 CONFIG_CPU_TYPE="cortex-a53"
