--- a/xdr6086.config
+++ b/xdr6086.config
@@ -4645,7 +4645,7 @@ CONFIG_PACKAGE_libgmp=y
 # CONFIG_PACKAGE_libinotifytools is not set
 # CONFIG_PACKAGE_libinput is not set
 # CONFIG_PACKAGE_libintl-full is not set
-CONFIG_PACKAGE_libiperf3=y
+# CONFIG_PACKAGE_libiperf3=y
 # CONFIG_PACKAGE_libipfs-http-client is not set
 # CONFIG_PACKAGE_libiw is not set
 CONFIG_PACKAGE_libiwinfo=y
@@ -5064,14 +5064,14 @@ CONFIG_PACKAGE_luci-app-guest-wifi=y
 # CONFIG_PACKAGE_luci-app-haproxy-tcp is not set
 # CONFIG_PACKAGE_luci-app-hd-idle is not set
 # CONFIG_PACKAGE_luci-app-hnet is not set
-CONFIG_PACKAGE_luci-app-homebox=y
+# CONFIG_PACKAGE_luci-app-homebox=y
 # CONFIG_PACKAGE_luci-app-homeconnect is not set
 # CONFIG_PACKAGE_luci-app-homeproxy is not set
 # CONFIG_PACKAGE_luci-app-homeredirect is not set
 # CONFIG_PACKAGE_luci-app-https-dns-proxy is not set
 CONFIG_PACKAGE_luci-app-idns=y
 # CONFIG_PACKAGE_luci-app-ikoolproxy is not set
-CONFIG_PACKAGE_luci-app-iperf3-server=y
+# CONFIG_PACKAGE_luci-app-iperf3-server=y
 # CONFIG_PACKAGE_luci-app-ipsec-server is not set
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 # CONFIG_PACKAGE_luci-app-istoreenhance is not set
@@ -5099,7 +5099,7 @@ CONFIG_PACKAGE_luci-app-mosdns=y
 # CONFIG_PACKAGE_luci-app-nft-qos is not set
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 # CONFIG_PACKAGE_luci-app-noddos is not set
-CONFIG_PACKAGE_luci-app-npc=y
+# CONFIG_PACKAGE_luci-app-npc=y
 # CONFIG_PACKAGE_luci-app-nps is not set
 # CONFIG_PACKAGE_luci-app-ntpc is not set
 # CONFIG_PACKAGE_luci-app-oaf is not set
@@ -5420,11 +5420,11 @@ CONFIG_PACKAGE_luci-i18n-firewall-en=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-guest-wifi-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-homebox-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-homebox-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-homebox-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-idns-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-idns-zh_Hans is not set
-CONFIG_PACKAGE_luci-i18n-iperf3-server-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-iperf3-server-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-iperf3-server-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-mac-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mac-zh_Hans is not set
@@ -5463,7 +5463,7 @@ CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mwan3-vi is not set
 # CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mwan3-zh-tw is not set
-CONFIG_PACKAGE_luci-i18n-npc-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-npc-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-npc-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-passwall-zh_Hans is not set
@@ -6405,7 +6405,7 @@ CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_haproxy=y
 # CONFIG_PACKAGE_halog is not set
 # CONFIG_PACKAGE_haproxy-nossl is not set
-CONFIG_PACKAGE_homebox=y
+# CONFIG_PACKAGE_homebox=y
 # CONFIG_PACKAGE_istoreenhance is not set
 # CONFIG_PACKAGE_kcptun-client is not set
 # CONFIG_PACKAGE_kcptun-config is not set
@@ -6650,7 +6650,7 @@ CONFIG_PACKAGE_ethtool=y
 # CONFIG_PACKAGE_iftop is not set
 # CONFIG_PACKAGE_iiod is not set
 # CONFIG_PACKAGE_iperf is not set
-CONFIG_PACKAGE_iperf3=y
+# CONFIG_PACKAGE_iperf3=y
 # CONFIG_PACKAGE_iperf3-ssl is not set
 # CONFIG_PACKAGE_ipip is not set
 # CONFIG_PACKAGE_ipip6 is not set
@@ -6723,7 +6723,7 @@ CONFIG_PACKAGE_libipset=y
 # CONFIG_PACKAGE_nlbwmon is not set
 # CONFIG_PACKAGE_noddos is not set
 # CONFIG_PACKAGE_noping is not set
-CONFIG_PACKAGE_npc=y
+# CONFIG_PACKAGE_npc=y
 # CONFIG_NPC_COMPRESS_UPX is not set
 # CONFIG_PACKAGE_nps is not set
 # CONFIG_NPS_COMPRESS_UPX is not set
